changed value color

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -46,7 +46,7 @@
                 white-space: nowrap;
                 
                 &.success {
-                    color: $secondary;
+                    color: $success;
                 }
             }
         }
