--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -1,10 +1,8 @@
 @import 'src/styles/colors';
 
 .about {
-    // padding: 2em 0;
-    // height: calc(100vh - 100px);
     height: 100vh;
-    padding-top: calc(calc(100vh - 900px) / 2);
+    padding-top: 5em;
 }
 
 .info {
