--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -57,3 +57,19 @@
       margin-right: 10px;
     }
   }
+
+  .debounce {
+    position: relative;
+    top: -8px;
+    animation: action 1s infinite alternate;
+
+      @keyframes action {
+        0% {
+            transform: translateY(0);
+        }
+    
+        100% {
+            transform: translateY(15px);
+        }
+    }
+  }
