--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -8,30 +8,32 @@
   width: 100%;
   height: 80px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: flex-end;
   padding: 0 2rem;
   background-color: $color-white;
   z-index: 999;
   padding-bottom: 1rem;
   box-shadow: 1px 1px 10px 1px $color-gray-light;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+
+  &.visible {
+    opacity: 1;
+  }
 
   .links {
-    display: none;
+    display: flex;
     grid-gap: 2em;
     align-items: center;
     justify-content: center;
     justify-self: flex-end;
 
-    &.visible {
-      display: flex;
-      flex: 1;
-    }
-
     .link {
       color: $color-gray-light;
-      font-size: 1rem;
+      font-size: 1.2rem;
       font-weight: 700;
+      text-transform: uppercase;
       transition: color 0.3s ease;
 
       &:hover {
