--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -3,9 +3,8 @@
 
   .section {
     padding: 3em 1.5em 6em 1.5em;
-    //background-color: #303841;
     background-color: $primary;
-    box-shadow: 0 -1px 5px 1px rgba(255, 255, 255, 0.2);
+    // box-shadow: 0 -1px 5px 1px rgba(255, 255, 255, 0.2);
 
     h2 {
       padding: 0;
@@ -23,14 +22,28 @@
   }
 
   .links {
-    display: flex;
-    flex-grow: 1;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-row-gap: 3em;
 
-    @include for-mobile-small {
+    @include respond-above(sm) {
+      display: flex;
+      flex-grow: 1;
+      justify-content: space-around;
+    }
+
+    @include respond-below(sm) {
       flex-direction: column;
       a {
-        margin-bottom: 0.7rem;
+        // margin-bottom: 0.7rem;
+      }
+    }
+
+    .title {
+      display: none;
+
+      @include respond-above(sm) {
+        display: inline;
       }
     }
   }
