--- a/src/components/ProjectList/ProjectList.module.scss
+++ b/src/components/ProjectList/ProjectList.module.scss
@@ -1,7 +1,14 @@
+@import 'src/styles/breakpoints';
+
 .projects {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   margin-bottom: 2rem;
+  grid-gap: 1em;
+
+  @include respond-above(sm) {
+    grid-gap: 1em;
+  }
 }
