--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -1,5 +1,5 @@
 .projects {
-    padding: 5em 0 2em 0;
+    padding: 5em 0 0 0;
     // background: rgb(129,223,118);
     // background: linear-gradient(36deg, rgba(129,223,118,0.7231267507002801) 0%, rgba(91,218,44,0.7875525210084033) 19%, rgba(38,215,166,0.6530987394957983) 46%, rgba(0,255,184,0.7903536414565826) 73%, rgba(0,146,255,0.7875525210084033) 100%);
 
