--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -1,36 +1,74 @@
 @import 'src/styles/colors';
+@import 'src/styles/breakpoints';
 
 .about {
-    height: 100vh;
+    min-height: 100vh;
     padding-top: 5em;
 }
 
 .info {
     display: flex;
-    grid-gap: 4rem;
+    flex-direction: column;
+    grid-gap: 2rem;
     padding-top: 4em;
+
+    @include respond-above(sm) {
+        grid-gap: 4rem;
+        flex-direction: row;
+    }
+
+    .imageWrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .image {
+            max-width: 90%;
+        }
+    }
 
     .infoWrapper {
         display: flex;
         flex-direction: column;
-        grid-gap: 3em;
-        padding-top: 3em;
+        grid-gap: 1em;
+        align-items: center;
+
+        @include respond-above(sm) {
+            grid-gap: 3em;
+            padding-top: 3em;
+        }
 
         .title {
             font-size: 2rem;
             font-weight: 600;
+            text-align: center;
+
+            @include respond-above(sm) {
+                font-size: 2rem;
+                text-align: left;
+            }
         }
 
         .description {
             color: $color-gray;
             font-weight: 500;
+            text-align: center;
+            @include respond-above(sm) {
+                text-align: left;
+            }
         }
     }
 
     .additionalInfo {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
+        display: flex;
+        flex-direction: column;
         grid-gap: 0.5em;
+
+        @include respond-above(sm) {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-gap: 0.5em;
+        }
 
         .item {
             display: flex;
