--- a/src/components/BookCard/BookCard.module.scss
+++ b/src/components/BookCard/BookCard.module.scss
@@ -3,22 +3,22 @@
 
 .card {
   position: relative;
-  width: 330px;
-  height: 190px;
-  margin: 20px 0;
+
+  width: 280px;
+  height: 170px;
 
   transform-style: preserve-3d;
   transform: perspective(2000px);
   transition: 1s;
   box-shadow: inset 100px 0 50px rgba(255, 255, 255, 0.5), 0 0 5px rgba(255, 255, 255, 0.5);
 
-  @include for-tablet-down {
+  @include respond-above(sm) {
     width: 370px;
     height: 220px;
   }
-  @include for-mobile-small {
-    width: 300px;
-    height: 170px;
+  @include respond-above(lg) {
+    width: 330px;
+    height: 190px;
   }
 
   &:hover {
@@ -41,7 +41,7 @@
     z-index: 1;
     transition: 1s;
 
-    & img {
+    .image {
       position: absolute;
       top: 0;
       left: 0;
