fix skills font-size

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -81,7 +81,11 @@
 
     .skills {
         min-height: 1em;
-        font-size: 2rem;
+        font-size: 1rem;
+
+        @include respond-above(sm) {
+          font-size: 2rem;
+        }
     }
   }
 
