--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -10,10 +10,13 @@
     display: flex;
     flex-direction: column;
     grid-gap: 2rem;
-    padding-top: 4em;
+    padding-top: 2em;
 
     @include respond-above(sm) {
-        grid-gap: 4rem;
+        padding-top: 5em;
+    }
+
+    @include respond-above(sm) {
         flex-direction: row;
     }
 
@@ -30,7 +33,7 @@
     .infoWrapper {
         display: flex;
         flex-direction: column;
-        grid-gap: 1em;
+        grid-gap: 2em;
         align-items: center;
 
         @include respond-above(sm) {
@@ -67,7 +70,8 @@
         @include respond-above(sm) {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            grid-gap: 0.5em;
+            grid-row-gap: 1em;
+            grid-column-gap: 4em;
         }
 
         .item {
