--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -2,9 +2,8 @@
 @import "src/styles/breakpoints";
 
   .section {
-    padding: 3em 1.5em 6em 1.5em;
+    padding: 5em 1.5em;
     background-color: $primary;
-    // box-shadow: 0 -1px 5px 1px rgba(255, 255, 255, 0.2);
 
     h2 {
       padding: 0;
