--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,5 +1,7 @@
 $primary: #1db199;
 $primary-light: #49f9db;
+$primary-dark: #178f62;
+$primary-dark-hover: #054a31;
 
 $secondary: #17a2b8;
 $secondary-light: #4fdef4;
