--- a/src/components/BookCard/BookCard.module.scss
+++ b/src/components/BookCard/BookCard.module.scss
@@ -1,82 +1,32 @@
-@import "src/styles/colors";
-@import "src/styles/breakpoints";
+.cardWrapper {
+  display: flex;
+  flex-basis: 25em;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
-.card {
-  position: relative;
+  padding: 2em 0;
 
-  width: 280px;
-  height: 170px;
-
-  transform-style: preserve-3d;
-  transform: perspective(2000px);
-  transition: 1s;
-  box-shadow: inset 100px 0 50px rgba(255, 255, 255, 0.5), 0 0 5px rgba(255, 255, 255, 0.5);
-
-  @include respond-above(sm) {
-    width: 370px;
-    height: 220px;
-  }
-  @include respond-above(lg) {
-    width: 330px;
-    height: 190px;
-  }
+  transition: box-shadow 0.4s ease;
 
   &:hover {
-    z-index: 100;
-    box-shadow: inset 20px 0 50px rgba(200, 200, 200, 0.5), 0 0 5px rgba(200, 200, 200, 0.5);
-    transform: perspective(2000px) rotate(-3deg);
-
-    & .imgBox {
-      transform: rotateY(-135deg);
-    }
+    box-shadow: 0 0 10px 3px rgb(0, 0, 0, 0.3);
   }
 
-  & .imgBox {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    border: 1px solid #000;
-    box-sizing: border-box;
-    transform-origin: left;
-    z-index: 1;
-    transition: 1s;
-
-    .image {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
+  .image {
+    max-width: 80%;
+    height: auto;
+    margin-bottom: 1em;
   }
 
-  & .details {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    box-sizing: border-box;
-    padding: 1.2rem 1.2rem 1rem 1.2rem;
-    background-color: $background-card;
+  .title {
+    font-size: 1.5rem;
+    text-align: center;
+    font-weight: 500;
+  }
 
-    & h2 {
-      margin-bottom: 0.5rem;
-    }
-
-    p {
-      text-align: center;
-    }
-
-    & a {
-      position: absolute;
-      bottom: 20px;
-      background-color: $background-button;
-      color: $color-white;
-    }
+  .description {
+    text-align: center;
+    max-width: 90%;
   }
 }
