--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -2,7 +2,7 @@
 @import "src/styles/breakpoints";
 
   .section {
-    padding: 5em 1.5em;
+    padding: 5em 1.5em 6em 1.5em;
     background-color: $primary;
 
     h2 {
@@ -21,22 +21,10 @@
   }
 
   .links {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-row-gap: 3em;
-
-    @include respond-above(sm) {
-      display: flex;
-      flex-grow: 1;
-      justify-content: space-around;
-    }
-
-    @include respond-below(sm) {
-      flex-direction: column;
-      a {
-        // margin-bottom: 0.7rem;
-      }
-    }
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex: 1;
 
     .title {
       display: none;
