--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -7,12 +7,14 @@
   left: 0;
   width: 100%;
   height: 80px;
+  
   display: flex;
   justify-content: center;
   align-items: flex-end;
   padding: 0 2rem;
+
   background-color: $color-white;
-  z-index: 999;
+  z-index: 100;
   padding-bottom: 1rem;
   box-shadow: 1px 1px 10px 1px $color-gray-light;
   opacity: 0;
@@ -28,6 +30,13 @@
     align-items: center;
     justify-content: center;
     justify-self: flex-end;
+
+    @include respond-above(xs) {
+      grid-gap: 2.5em;
+    }
+    @include respond-above(sm) {
+      grid-gap: 4em;
+    }
 
     .link {
       color: $color-gray-light;
