--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -53,7 +53,7 @@
             font-size: 2rem;
             font-weight: 700;
             text-align: center;
-            color: $color-black;
+            color: var(--color-toggle-dark);
 
             @include respond-above(sm) {
                 font-size: 2rem;
@@ -65,7 +65,7 @@
         }
 
         .description {
-            color: $color-gray;
+            color: var(--color-dark);
             font-weight: 500;
             text-align: center;
             @include respond-above(sm) {
@@ -94,11 +94,11 @@
             font-size: 1rem;
 
             .value {
-                color: $color-gray;
                 white-space: nowrap;
+                color: var(--color-dark);
                 
                 &.success {
-                    color: $success;
+                    color: var(--color-success);
                 }
             }
         }
