--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -10,13 +10,12 @@
   
   display: flex;
   justify-content: center;
-  align-items: flex-end;
-  padding: 0 2rem;
+  align-items: center;
 
-  background-color: $color-white;
+  background-color: var(--background-navbar);
   z-index: 100;
   padding-bottom: 1rem;
-  box-shadow: 1px 1px 10px 1px $color-gray-light;
+  box-shadow: 1px 1px 10px 1px var(--shadow-navbar);
   opacity: 0;
   transition: opacity 0.3s ease;
 
@@ -39,14 +38,14 @@
     }
 
     .link {
-      color: $color-gray-light;
+      color: var(--color-gray-light);
       font-size: 1.2rem;
       font-weight: 700;
       text-transform: uppercase;
       transition: color 0.3s ease;
 
       &:hover {
-        color: $color-gray;
+        color: var(--color-gray);
       }
     }
   }
