--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -7,6 +7,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
-        margin-top: 2em;
+        margin-top: 1em;
+        padding-top: 1em;
     }
 }
