--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -26,7 +26,7 @@
     font-size: 18px;
     font-weight: 500;
     border-radius: 40px;
-    color: $primary;
+    color: var(--primary);
     letter-spacing: 2px;
     box-shadow: -2px -2px 8px rgba(255, 255, 255, 1),
       -2px -2px 12px rgba(255, 255, 255, 0.5),
@@ -34,7 +34,7 @@
     transition: all 0.2s linear;
   
     &:hover {
-      color: $primary;
+      color: var(--primary);
       box-shadow: inset -2px -2px 8px rgba(255, 255, 255, 1),
         inset -2px -2px 12px rgba(255, 255, 255, 0.5),
         inset 2px 2px 4px rgba(255, 255, 255, 0.1),
@@ -75,39 +75,45 @@
     align-items: flex-end;
     font-size: 2rem;
     font-weight: 700;
-    color: $primary-dark;
+    color: var(--primary-dark);
     text-transform: uppercase;
     letter-spacing: 0.1rem;
 
     @include respond-above(xs) {
       font-size: 3.5rem;
     }
+    @include respond-above(sm) {
+      font-size: 4.5rem;
+    }
+    @include respond-above(lg) {
+      font-size: 5.5rem;
+    }
 
-    -webkit-text-stroke: 1px $primary-dark-hover;
-    text-stroke: 1px $primary-dark-hover;
+    -webkit-text-stroke: 1px var(--primary-dark-hover);
+    text-stroke: 1px var(--primary-dark-hover);
 
     &::before {
         content: attr(data-background-text);
         position: absolute;
-        transform: translateY(0.5rem);
         font-size: 3.5rem;
         font-weight: 700;
         text-transform: uppercase;
         color: transparent;
-        -webkit-text-stroke: 1px $primary;
-        text-stroke: 1px $primary-light;
+        -webkit-text-stroke: 1px var(--primary);
+        text-stroke: 1px var(--primary);
         z-index: -1;
         opacity: 0.5;
+        letter-spacing: 1.33rem;
 
         @include respond-above(xs) {
-            letter-spacing: 1.33rem;
             font-size: 4.5rem;
           }
         @include respond-above(sm) {
           font-size: 5.5rem;
         }
-        // @include respond-above(lg) {
-        //   font-size: 3.5rem;
-        // }
+        @include respond-above(lg) {
+          font-size: 8rem;
+          letter-spacing: 1.66rem;
+        }
     }
 }
