--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -18,6 +18,15 @@
     --background-card: #dcdcd9;
     --background-button: #a7a7a7;
 
+    --color-primary: #1db199;
+    --color-primary-light: #49f9db;
+    --color-primary-dark: #1b986a;
+
+    // --color-secondary: #2e188f;
+    --color-secondary: #3a22a7;
+    --color-secondary-dark: #180a55;
+    --color-secondary-light: #7254fa;
+
     --color-white: #f5f5f5;
     --color-black: #000;
     --color-light: #afaeae;
