--- a/src/components/BookCard/BookCard.module.scss
+++ b/src/components/BookCard/BookCard.module.scss
@@ -9,7 +9,8 @@
 
   transition: box-shadow 0.4s ease;
 
-  &:hover {
+  &:hover,
+  &:focus {
     box-shadow: 0 0 10px 3px var(--card-shadow);
   }
 
