--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -2,6 +2,7 @@
 
 .projects {
     padding: 5em 0 3em 0;
+    background-color: var(--color-white);
     
     .projectsWrapper {
         display: flex;
