--- a/src/components/Skills/Skills.module.scss
+++ b/src/components/Skills/Skills.module.scss
@@ -2,12 +2,17 @@
 @import 'src/styles/common';
 
 .skills {
+    position: relative;
     padding: 5em 0;
     min-height: 100vh;
 
+    @extend .paralax;
+    &::before {
+        background-image: url("/img/develop.jpeg");
+    }
+
     .progressWrapper {
-        max-width: 80%;
-        margin: 0 auto;
+        @extend .container;
         display: flex;
         flex-direction: column;
         grid-gap: 1em;
