--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -9,12 +9,8 @@
   }
   
   .container {
-    position: relative;
-    margin: 0 auto;
-    min-height: calc(100vh - 60px);
-    width: 100%;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    margin: auto;
+    max-width: min(90%, 80em);
   }
   
   .btn {
@@ -75,7 +71,7 @@
     align-items: flex-end;
     font-size: 2rem;
     font-weight: 700;
-    color: var(--primary-dark);
+    color: var(--color-secondary);
     text-transform: uppercase;
     letter-spacing: 0.1rem;
 
@@ -89,20 +85,20 @@
       font-size: 5.5rem;
     }
 
-    -webkit-text-stroke: 1px var(--primary-dark-hover);
-    text-stroke: 1px var(--primary-dark-hover);
+    -webkit-text-stroke: 1px var(--color-secondary-dark);
+    text-stroke: 1px var(--color-secondary-dark);
 
     &::before {
-        content: attr(data-background-text);
+        content: attr(data-text);
         position: absolute;
         font-size: 3.5rem;
         font-weight: 700;
         text-transform: uppercase;
         color: transparent;
-        -webkit-text-stroke: 1px var(--primary);
-        text-stroke: 1px var(--primary);
-        z-index: -1;
-        opacity: 0.5;
+        -webkit-text-stroke: 3px var(--color-secondary-light);
+        text-stroke: 3px var(--color-secondary-light);
+        z-index: 0;
+        opacity: 0.3;
         letter-spacing: 1.33rem;
 
         @include respond-above(xs) {
@@ -116,4 +112,52 @@
           letter-spacing: 1.66rem;
         }
     }
+}
+
+.paralax {
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.4;
+    z-index: -1;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+
+.arrow-next {
+  display: none;
+  position: absolute;
+  bottom: 2em;
+  left: 50%;
+  animation: action 1s infinite alternate;
+
+    @keyframes action {
+      0% {
+          transform: translateY(0);
+      }
+  
+      100% {
+          transform: translateY(-15px);
+      }
+  }
+
+  &::before {
+    content: '';
+    border: solid var(--color-secondary-light);
+    border-width: 0 5px 5px 0;
+    display: inline-block;
+    padding: 8px;    
+    transform: rotate(45deg);
+  }   
+  @include respond-above(lg) {
+    display: inline;
+  }
 }
