--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -34,9 +34,9 @@
   
   @include respond-above(sm) {
     grid-gap: 1.6em;
-    flex-direction: row;
   }
   @include respond-above(lg) {
+    flex-direction: row;
     grid-gap: 3.3em;
   }
   
@@ -45,7 +45,7 @@
     max-width: 300px;
 
     @include respond-above(xs) {
-      max-width: 500px;
+      max-width: 400px;
     }
   }
 
@@ -56,8 +56,7 @@
     
     .greteen {
       position: relative;
-      left: -1.33em;
-      font-size: 1rem;
+      font-size: 1.5rem;
       color: var(--color-black);
     
       @include respond-above(xs) {
@@ -65,6 +64,9 @@
       }
       @include respond-above(sm) {
         font-size: 3rem;
+      }
+      @include respond-above(lg) {
+        left: -1em;
       }
     }
 
@@ -97,7 +99,7 @@
   .download {
     align-self: flex-end;
     color: var(--color-secondary);
-    font-weight: 500;
+    font-weight: 700;
     padding: 1em 2em;
     border: 3px solid var(--color-secondary);
     border-radius: 30px;
