--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -14,8 +14,7 @@
 
   background-color: var(--background-navbar);
   z-index: 100;
-  padding-bottom: 1rem;
-  box-shadow: 1px 1px 10px 1px var(--shadow-navbar);
+  box-shadow: 0 1px 10px 1px var(--shadow-navbar);
   opacity: 0;
   transition: opacity 0.3s ease;
 
